<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_formulario_contato_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/activity_formulario_contato_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/endereco"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/activity_formulario_contato_telefone_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/telefone_1"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/activity_formulario_contato_telefone_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/telefone_2"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:targetApi="o" />

    </LinearLayout>

</ScrollView>