<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_contato_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/alex_fernando_teste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_contato_endereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rua_avelino_anel_n_593_teste"
        app:layout_constraintEnd_toEndOf="@+id/item_contato_nome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_contato_nome"
        app:layout_constraintTop_toBottomOf="@+id/item_contato_nome" />

    <TextView
        android:id="@+id/item_contato_telefone_1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/_518715846_teste"
        app:layout_constraintStart_toStartOf="@+id/item_contato_nome"
        app:layout_constraintTop_toBottomOf="@+id/item_contato_nome" />

    <TextView
        android:id="@+id/item_contato_telefone_2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/_564614684_teste"
        app:layout_constraintEnd_toEndOf="@+id/item_contato_nome"
        app:layout_constraintTop_toBottomOf="@+id/item_contato_nome" />

</androidx.constraintlayout.widget.ConstraintLayout>